Log out + job.css updated

--- a/appdev_project2/src/main/resources/templates/index.html
+++ b/appdev_project2/src/main/resources/templates/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <link rel="stylesheet" type="text/css" href="/css/index.css">
 </head>
+
 <body>
     <header>
         <div class="search">
-        <input type="text" class="input" name="q" placeholder="Search keyword">
-        <input type="submit" class="search-button" value="Search">
+            <input type="text" class="input" name="q" placeholder="Search keyword">
+            <input type="submit" class="search-button" value="Search">
         </div>
         <h1>JOB ADVERTISEMENTS</h1>
         <div class="logout">
-        <h5>Hello"xyz"</h5>
-        <button>Logout</button>
+            <h5>Hello"xyz"</h5>
+            <a href="http://localhost:8080/logout"><button>Log Out</button></a>
         </div>
     </header>
     <main>
@@ -32,4 +34,5 @@
         </table>
     </main>
 </body>
+
 </html>
