--- a/appdev_project2/src/main/resources/static/css/job.css
+++ b/appdev_project2/src/main/resources/static/css/job.css
@@ -49,14 +49,14 @@ h1{
 .logout{
     padding: 30px;
 }
-.search-button{
+.bid-button{
     height: 30px;
     width: 80px;
     border-radius: 7px;
     background-color: white;
     border: 0px;
 }
-.search-button:hover{
+.bid-button:hover{
     background-color:  rgb(6, 104, 202);
     color:white;
     border: 0px;
