--- a/appdev_project2/src/main/resources/templates/job.html
+++ b/appdev_project2/src/main/resources/templates/job.html
@@ -10,8 +10,8 @@
         <div></div>
         <h1>JOB ADVERTISEMENTS</h1>
         <div class="logout">
-            <h5>Hello<a>"user"</a></h5>
-            <button>Logout</button>
+            <h5>Hello</h5>
+            <a th:href="@{'/logout'}"><button>Log Out</button></a>
         </div>
     </header>
     <main>
