--- a/appdev_project2/src/main/resources/templates/account.html
+++ b/appdev_project2/src/main/resources/templates/account.html
@@ -7,8 +7,12 @@
 
 <body>
     <header>
-        <div></div>
-        <div><h1>JOB ADVERTISEMENTS</h1></div>
+        <div class="home">
+            <a th:href="@{'/index'}"><button>Home</button></a>
+        </div>
+        <div>
+            <h1>JOB ADVERTISEMENTS</h1>
+        </div>
         <div class="logout">
             <h4>Hello <a th:text="${user.email}" th:href="@{'/user/' + ${user.userId}}">email</a></h4>
             <a th:href="@{'/logout'}"><button>Log Out</button></a>
@@ -29,7 +33,7 @@
                 <td th:text="${user.phoneNumber}">Phone</td>
             </tr>
         </table>
-        
+
         <table>
             <tr>
                 <th>Job</th>
@@ -40,8 +44,8 @@
                 <td th:text="${job.date}">Date</td>
             </tr>
         </table>
-        
-         <div class="add-job">
+
+        <div class="add-job">
             <input type="text" class="input" name="Job" placeholder="Job">
             <input type="text" class="input" name="Description" placeholder="Description">
             <input type="datetime-local" class="input" name="Date" placeholder="Date">
