Prepared html for internationalisation

--- a/appdev_project2/src/main/resources/templates/account.html
+++ b/appdev_project2/src/main/resources/templates/account.html
@@ -8,36 +8,36 @@
 <body>
     <header>
         <div class="home">
-            <a th:href="@{'/index'}"><button>Home</button></a>
+            <a th:href="@{'/index'}"><button th:text="#{header.home}">Home</button></a>
         </div>
         <div>
-            <h1>JOB ADVERTISEMENTS</h1>
+            <h1 th:text="#{header.jobAds}">JOB ADVERTISEMENTS</h1>
         </div>
         <div class="logout">
-            <h4>Hello <a th:text="${user.email}" th:href="@{'/user/' + ${user.userId}}">email</a></h4>
-            <a th:href="@{'/logout'}"><button>Log Out</button></a>
+            <h4 th:text="#{header.hello}">Hello <a th:text="${user.email}" th:href="@{'/user/' + ${user.userId}}">email</a></h4>
+            <a th:href="@{'/logout'}"><button th:text="#{header.logout}">Log Out</button></a>
         </div>
     </header>
     <main>
         <table>
             <tr>
-                <td>Name:</td>
+                <td th:text="#{account.name}">Name:</td>
                 <td th:text="${user.name} + ' ' + ${user.surname}">Name</td>
             </tr>
             <tr>
-                <td>Email:</td>
+                <td th:text="#{account.email}">Email:</td>
                 <td th:text="${user.email}">Email</td>
             </tr>
             <tr>
-                <td>Phone No.:</td>
+                <td th:text="#{account.phoneNumber}">Phone No.:</td>
                 <td th:text="${user.phoneNumber}">Phone</td>
             </tr>
         </table>
 
         <table>
             <tr>
-                <th>Job</th>
-                <th>Date</th>
+                <th th:text="#{job.name}">Job</th>
+                <th th:text="#{job.date}">Date</th>
             </tr>
             <tr th:each="job : ${jobs}">
                 <td th:text="${job.name}">Job</td>
@@ -48,10 +48,10 @@
         <div class="add-job">
 	        <form class="form-signin" method="post" th:action="@{/newjob}" th:object="${jobForm}">
 	        	<input type="hidden" id="ownerId" name="ownerId" class="form-control" placeholder="OwnerId" required="true" th:field="*{ownerId}">
-	            <input type="text" class="input" name="Job" placeholder="Job Name" required="true" th:field="*{name}">
+	            <input type="text" class="input" name="Job" th:placeholder="#{job.name}" required="true" th:field="*{name}">
 	            <span th:if="${#fields.hasErrors('name')}" class="error" th:errors="*{name}" >Error</span>
 	            <span th:if="${valueError}" class="error" th:text="#{newbid.valueError}" >Error</span>
-	            <input type="text" class="input" name="Description" placeholder="Description" required="true" th:field="*{description}">
+	            <input type="text" class="input" name="Description" th:placeholder="#{job.description}" required="true" th:field="*{description}">
 	            <span th:if="${#fields.hasErrors('description')}" class="error" th:errors="*{description}" >Error</span>
 	            <span th:if="${valueError}" class="error" th:text="#{newbid.valueError}" >Error</span>
 	            <button class="btn btn-lg btn-primary btn-block" type="submit" th:text="#{account.addJob}">Add</button>
