--- a/appdev_project2/src/main/resources/templates/index.html
+++ b/appdev_project2/src/main/resources/templates/index.html
@@ -8,30 +8,30 @@
 <body>
     <header>
         <div class="search">
-            <input type="text" class="input" name="q" placeholder="Search keyword">
-            <input type="submit" class="search-button" value="Search">
+            <input type="text" class="input" name="q" th:placeholder="#{header.keyword}">
+            <button th:text="#{header.search}">Search</button>
         </div>
         <div>
-            <h1>JOB ADVERTISEMENTS</h1>
+            <h1 th:text="#{header.jobAds}">JOB ADVERTISEMENTS</h1>
         </div>
         <div class="logout">
-            <h4>Hello <a th:text="${user.email}" th:href="@{'/user/' + ${user.userId}}">email</a></h4>
-            <a th:href="@{'/logout'}"><button>Log Out</button></a>
+            <h4 th:text="#{header.hello}">Hello <a th:text="${user.email}" th:href="@{'/user/' + ${user.userId}}">email</a></h4>
+            <a th:href="@{'/logout'}"><button th:text="#{header.logout}">Log Out</button></a>
         </div>
     </header>
     <main>
         <table>
             <tr>
-                <th>Name</th>
-                <th>Description</th>
-                <th>Date Published</th>
+                <th th:text="#{job.name}">Name</th>
+                <th th:text="#{job.description}">Description</th>
+                <th th:text="#{job.date}">Date Published</th>
                 <th></th>
             </tr>
             <tr th:each="job : ${jobs}">
                 <td th:text="${job.name}">Name</td>
                 <td th:text="${job.description}">Description</td>
                 <td th:text="${job.date}">Date</td>
-                <td align='center'><a th:href="@{'/job/' + ${job.jobId}}">View</a></td>
+                <td align='center'><a th:href="@{'/job/' + ${job.jobId}}" th:text="#{job.view}">View</a></td>
             </tr>
         </table>
     </main>
