--- a/appdev_project2/src/main/resources/templates/register.html
+++ b/appdev_project2/src/main/resources/templates/register.html
@@ -14,38 +14,38 @@
 <body>
     <div class="container">
         <form class="form-signin" method="post" th:action="@{/register}" th:object="${userForm}">
-            <h2 class="form-signin-heading">Please register</h2>
+            <h2 class="form-signin-heading" th:text="#{register.message}">Please register</h2>
             <p>
                 <label for="name" class="sr-only" th:text="#{register.name}">Name</label>
-                <input type="name" id="name" name="name" class="form-control" placeholder="Name" required="true" th:field="*{name}">
+                <input type="name" id="name" name="name" class="form-control" th:placeholder="#{register.name}" required="true" th:field="*{name}">
                 <span th:if="${#fields.hasErrors('name')}" class="error" th:errors="*{name}" >Error</span>
             </p>
             <p>
                 <label for="surname" class="sr-only" th:text="#{register.surname}">Surname</label>
-                <input type="surname" id="surname" name="surname" class="form-control" placeholder="Surname" required="true" th:field="*{surname}">
+                <input type="surname" id="surname" name="surname" class="form-control" th:placeholder="#{register.surname}" required="true" th:field="*{surname}">
                 <span th:if="${#fields.hasErrors('surname')}" class="error" th:errors="*{surname}" >Error</span>
             </p>
             <p>
                 <label for="email" class="sr-only" th:text="#{register.email}">Email</label>
-                <input type="email" id="email" name="email" class="form-control" placeholder="Email" required="true" th:field="*{email}">
+                <input type="email" id="email" name="email" class="form-control" th:placeholder="#{register.email}" required="true" th:field="*{email}">
                 <span th:if="${#fields.hasErrors('email')}" class="error" th:errors="*{email}" >Error</span>
             </p>
             <p>
                 <label for="phone" class="sr-only" th:text="#{register.phoneNumber}">Phone No</label>
-                <input type="number" id="phone" name="phone" class="form-control" placeholder="Phone No" required="true" th:field="*{phoneNumber}">
+                <input type="number" id="phone" name="phone" class="form-control" required="true" th:field="*{phoneNumber}">
                 <span th:if="${#fields.hasErrors('phoneNumber')}" class="error" th:errors="*{phoneNumber}" >Error</span>
             </p>
             <p>
                 <label for="password" class="sr-only" th:text="#{register.password}">Password</label>
-                <input type="password" id="password" name="password" class="form-control" placeholder="Password" required="true" th:field="*{password}">
+                <input type="password" id="password" name="password" class="form-control" th:placeholder="#{register.password}" required="true" th:field="*{password}">
                 <span th:if="${#fields.hasErrors('password')}" class="error" th:errors="*{password}" >Error</span>
             </p>
             <p>
                 <label for="password" class="sr-only" th:text="#{register.password}">Password</label>
-                <input type="password" id="password" name="password" class="form-control" placeholder="Password" required="true" th:field="*{password2}">
+                <input type="password" id="password" name="password" class="form-control" th:placeholder="#{register.password}" required="true" th:field="*{password2}">
                 <span th:if="${#fields.hasErrors('password2')}" class="error" th:errors="*{password2}" >Error</span>
             </p>
-            <button class="btn btn-lg btn-primary btn-block" type="submit" th:text="#{register.register}">Register</button>
+            <button class="btn btn-lg btn-primary btn-block" type="submit" th:text="#{register.submit}">Register</button>
         </form>
     </div>
 </body>
